# CaffStore/CaffStore.Api/Swagger/swagger.json
@@ -66,6 +66,17 @@
           "Store"
         ],
         "operationId": "Store_BrowseImages",
+        "parameters": [
+          {
+            "name": "filter",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
